--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <!-- Construction Site Security -->
         <div
           class="service-card"
-          style="background-image: url(&quot;Assets/Construction.png&quot;)">
+          style="background-image: url(&quot;Assets/construction.png&quot;)">
           <div class="card-content">
             <h3>Construction Site Security</h3>
             <p class="description">
